--- a/views/ADMIN-Students.ejs
+++ b/views/ADMIN-Students.ejs
@@ -53,7 +53,7 @@
     
         <!- PERFIL ->
         <div id="profile">
-          <div id="photo"><img src="resources/Assets/ayrton.png" alt="Usuario"></div>
+          <div id="photo"><img src="resources/Assets/01-ADMIN.png" alt="Usuario"></div>
           <div id="name">
             <span>ADMIN</span>
             <div class="icon-edit">
@@ -69,7 +69,7 @@
           <div class="item">
             <a href="" id="Btn0">
               <div class="icon first-icon">
-                <img src="resources/Assets/add-usr.png" alt="Materias">
+                <img src="resources/Assets/10-HOME.png" alt="Materias">
               </div>
               <div class="title">
                 <span>Home</span>
