--- a/views/ADMIN-Teachers.ejs
+++ b/views/ADMIN-Teachers.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" href="resources/Assets/GG-corto.ico" class="rel">
     <link rel="stylesheet" href="resources/css/normalize.css"/>
     <link rel="stylesheet" href="resources/css/style.css"/>
-    <title>ADMIN | Students</title>
+    <title>ADMIN | Teachers</title>
 </head>
 <body class="hidden">
     <!- Inicio del Header ->
@@ -53,7 +53,7 @@
     
         <!- PERFIL ->
         <div id="profile">
-          <div id="photo"><img src="resources/Assets/ayrton.png" alt="Usuario"></div>
+          <div id="photo"><img src="resources/Assets/01-ADMIN.png" alt="Usuario"></div>
           <div id="name">
             <span>ADMIN</span>
             <div class="icon-edit">
@@ -69,7 +69,7 @@
           <div class="item">
             <a href="" id="Btn0">
               <div class="icon first-icon">
-                <img src="resources/Assets/add-usr.png" alt="Materias">
+                <img src="resources/Assets/10-HOME.png" alt="Materias">
               </div>
               <div class="title">
                 <span>Home</span>
@@ -80,7 +80,7 @@
           <div class="item separator"></div>
 
           <div class="item">
-            <a href="Admin%Add%Student" id="Btn1">
+            <a href="Admin%Add%Teacher" id="Btn1">
               <div class="icon">
                 <img src="resources/Assets/add-usr.png" alt="Materias">
               </div>
@@ -93,7 +93,7 @@
           <div class="item separator"></div>
   
           <div class="item">
-            <a href="Admin%Edit%Student" id='Btn2'>
+            <a href="Admin%Edit%Teacher" id='Btn2'>
               <div class="icon">
                 <img src="resources/Assets/usr-edit.png" alt="Materias">
               </div>
@@ -106,7 +106,7 @@
           <div class="item separator"></div>
   
           <div class="item">
-            <a href="Admin%Remove%Student" id="Btn3">
+            <a href="Admin%Remove%Teacher" id="Btn3">
               <div class="icon">
                 <img src="resources/Assets/remove-usr.png" alt="">
               </div>
@@ -138,7 +138,7 @@
 
     <article class="AS-Add" id="AS-Add">
         <div class="add-container">
-            <form action="/addStudent" method="post" class="form-add-s" >
+            <form action="/addTeacher" method="post" class="form-add-s" >
                 <span class="Add-tittle">AGREGAR PROFESOR</span>
                 <div class="Add-t-container">
                     <div class="Add-l-container">
