--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -133,9 +133,9 @@
                 </div>
                 <div class="Pcontainer-Inp">
                     <div class="PInUsr">
-                        <span class="PSContainer">   Usuario: </span>
+                        <span class="PSContainer">Usuario: </span>
                         <input type="text" name="newUser" id="PIUser" class="PIUser">
-                        <button><img src="resources/Assets/editar 1.png" alt="edit"></button>
+                        <button class="PBtn-Eusr"><img src="resources/Assets/editar 1.png" alt="edit"></button>
                     </div>
                     
                     <div class="PInPass">
