--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,7 +94,9 @@ body {
   height: 50px;
   align-items: center;
   justify-content: center;
-  vertical-align: middle
+  vertical-align: middle;
+  display: flex;
+  align-content: center;
 }
 
 .nav-menu {
@@ -1944,6 +1946,7 @@ tbody tr:nth-child(2n+1) {
   width: 150px;
   border-radius: 15px;
   font-size: 20px;
+}
 
 /* -------- REMOVE STUDENTS --------*/
 .AS-Remove{
@@ -2011,9 +2014,6 @@ tbody tr:nth-child(2n+1) {
   align-items: center;
 }
 
-
-
-
 .PE-btnAct{
   background: #020E18;
   border: 1px solid #114EEB;
@@ -2030,4 +2030,120 @@ tbody tr:nth-child(2n+1) {
   color: white;
   height: 15%;
 
+}
+
+
+
+/* ADMIN TEACHERS*/
+.Add-descr{
+  height: 100px;
+  width: 300px;
+  overflow-y: scroll;
+}
+
+.addTeach .group-surname{
+  margin-top: 22px;
+}
+
+.group-descr{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: nowrap;
+  flex-direction: column;
+}
+
+
+/* MODIFY TEACHERS */
+.group-search{
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.divEdit-span{
+  display: inline-block;
+}
+
+
+/* REMOVE TEACHERS*/
+.form-remove-s{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.Remove-tittle{
+  text-align: center;
+  font-size: 35px;
+  margin: 0.5% auto;
+  color: wheat;
+}
+
+.removeAll-container{
+  width: 50%;
+  height: 50%;
+  background-color: var(--bg-fondo);
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  margin-bottom: 70px;
+}
+
+.searchBar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
+#input_search{
+  width: 400px;
+  height: 45px;
+  padding: 10px;
+  font-size: 30px;
+}
+
+.searchBtn{
+  height: 45px;
+}
+
+.searchBtn:hover{
+  box-shadow: 0 0 10px var(--bg-neon), 0 0 40px var(--bg-neon), 0 0 80px var(--bg-neon);
+  cursor: pointer;
+}
+
+.searchIcon{
+  width: 100%;
+  height: 100%;
+}
+
+.tableRemove-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
+.removeTable{
+  text-align: center;
+  border: 1px solid white;
+}
+
+.btnRemove{
+  width: 150px;
+  height: 40px;
+  margin-top: 15px;
+  background: #020E18;
+  border: 1px solid #114EEB;
+  border-radius: 10px;
+  color: white;
 }
