--- a/views/ADMIN-AddStudent.ejs
+++ b/views/ADMIN-AddStudent.ejs
@@ -53,7 +53,7 @@
     
         <!- PERFIL ->
         <div id="profile">
-          <div id="photo"><img src="resources/Assets/ayrton.png" alt="Usuario"></div>
+          <div id="photo"><img src="resources/Assets/01-ADMIN.png" alt="Usuario"></div>
           <div id="name">
             <span>ADMIN</span>
             <div class="icon-edit">
@@ -69,7 +69,7 @@
           <div class="item">
             <a href="Admin%Students" id="Btn0">
               <div class="icon first-icon">
-                <img src="resources/Assets/add-usr.png" alt="Materias">
+                <img src="resources/Assets/10-HOME.png" alt="Materias">
               </div>
               <div class="title">
                 <span>Home</span>
@@ -207,6 +207,7 @@
         </form>
     </div>
     <script src="resources/js/main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
     <% if(typeof alert != "undefined") { %>
       <script>
@@ -214,10 +215,10 @@
           title: '<%= alertTitle %>',
           text: '<%= alertMessage %>',
           icon: '<%= alertIcon %>',
-          showConfirmButton: '<=% showConfirmButton%>',
+          showConfirmButton: '<=% showConfirmButton %>',
           timer: '<%= timer %>'
         }).then(()=>{
-          window.location='/<%= ruta %>'
+          window.location='/<%=ruta %>'
         })
       </script>
       <% } %>
