--- a/views/ADMIN-AddTeacher.ejs
+++ b/views/ADMIN-AddTeacher.ejs
@@ -7,9 +7,9 @@
     <link rel="icon" href="resources/Assets/GG-corto.ico" class="rel">
     <link rel="stylesheet" href="resources/css/normalize.css"/>
     <link rel="stylesheet" href="resources/css/style.css"/>
-    <title>ADMIN | Students</title>
+    <title>ADMIN | Teachers</title>
 </head>
-<body class="hidden">
+<body class="hidden addTeach">
     <!- Inicio del Header ->
     <header class="header">
         <nav class="nav">
@@ -53,7 +53,7 @@
     
         <!- PERFIL ->
         <div id="profile">
-          <div id="photo"><img src="resources/Assets/ayrton.png" alt="Usuario"></div>
+          <div id="photo"><img src="resources/Assets/01-ADMIN.png" alt="Usuario"></div>
           <div id="name">
             <span>ADMIN</span>
             <div class="icon-edit">
@@ -67,9 +67,9 @@
         <!- ITEMS ->
         <div id="menu-items">
           <div class="item">
-            <a href="Admin%Students" id="Btn0">
+            <a href="Admin%Teachers" id="Btn0">
               <div class="icon first-icon">
-                <img src="resources/Assets/add-usr.png" alt="Materias">
+                <img src="resources/Assets/10-HOME.png" alt="Materias">
               </div>
               <div class="title">
                 <span>Home</span>
@@ -80,7 +80,7 @@
           <div class="item separator"></div>
 
           <div class="item">
-            <a href="Admin%Add%Student" id="Btn1">
+            <a href="Admin%Add%Teacher" id="Btn1">
               <div class="icon">
                 <img src="resources/Assets/add-usr.png" alt="Materias">
               </div>
@@ -93,7 +93,7 @@
           <div class="item separator"></div>
   
           <div class="item">
-            <a href="Admin%Edit%Student" id='Btn2'>
+            <a href="Admin%Edit%Teacher" id='Btn2'>
               <div class="icon">
                 <img src="resources/Assets/usr-edit.png" alt="Materias">
               </div>
@@ -106,7 +106,7 @@
           <div class="item separator"></div>
   
           <div class="item">
-            <a href="Admin%Remove%Student" id="Btn3">
+            <a href="Admin%Remove%Teacher" id="Btn3">
               <div class="icon">
                 <img src="resources/Assets/remove-usr.png" alt="">
               </div>
@@ -133,8 +133,8 @@
     <!- Fin Menú Lateral Desplegable ->
 
     <div class="add-container">
-        <form action="/addStudent" method="post" class="form-add-s" >
-            <span class="Add-tittle">AGREGAR ALUMNO</span>
+        <form action="/addTeacher" method="post" class="form-add-s" >
+            <span class="Add-tittle">AGREGAR PROFESOR</span>
             <div class="Add-t-container">
                 <div class="Add-l-container">
 
@@ -174,28 +174,14 @@
                     </div>
 
                     <div class="AS-course">
-                        <div class="group-course">
-                            <span class="Add-span course-txt">Curso:</span>
-                            <select name="add_course" class="add_course" id="course-input">
-                                <option value="1">Primer Año</option>
-                                <option value="2">Segundo Año</option>
-                                <option value="3">Tercer Año</option>
-                                <option value="4">Cuarto Año</option>
-                                <option value="5">Quinto Año</option>
-                                <option value="6">Sexto Año</option>
-                                <option value="7">Séptimo Año</option>
-                            </select>
-                            <span class="Add-span course-divition">División:</span>
-                            <select name="add_divition" class="add_divition" id="divition-input">
-                                <option value="1">A</option>
-                                <option value="2">B</option>
-                                <option value="3">C</option>
-                            </select>
-                            <span><b class="aster">  *</b></span>
+                        <div class="group-descr">
+                            <span class="Add-span course-txt">Descripción:</span>
+                            <input class="Add-descr" type="text" name="Add_descr">
+                            <div class="group-aster">
+                              <span class="Add-span surname-txt"><b class="aster"> * Obligatorio</b></span>
+                            </div>
                         </div>
-                        <div class="group-aster">
-                          <span class="Add-span surname-txt"><b class="aster"> * Obligatorio</b></span>
-                      </div>
+
                   </div>
 
                 </div>
@@ -207,6 +193,7 @@
         </form>
     </div>
     <script src="resources/js/main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
     <% if(typeof alert != "undefined") { %>
       <script>
