Pagina-Web_Gary-Goodsped
Some little changes.

--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -51,7 +51,7 @@
     
         <!- PERFIL ->
         <div id="profile">
-          <div id="photo"><img src="resources/Assets/ayrton.png" alt="Usuario"></div>
+          <div id="photo"><img src="resources/Assets/027-MTphoto.png" alt="Usuario"></div>
           <div id="name">
             <% if(login) { %>
               <span><%= name %></span>
@@ -128,7 +128,7 @@
             <div class="profile-container">
                 <div class="PU-container">
                     <div class="PU_image">
-                        <img class="PU_IP" src="resources/Assets/ayrton.png" alt="Usuario">
+                        <img class="PU_IP" src="resources/Assets/027-MTphoto.png" alt="Usuario">
                     </div>
                 </div>
                 <div class="Pcontainer-Inp">
