--- a/views/matters/AALNT.ejs
+++ b/views/matters/AALNT.ejs
@@ -8,16 +8,16 @@
     <title>Actividades</title>
 </head>
 <body>
-    <h1 class="Titulo">Formacion en Ambiente de Trabajo</h1>
+    <h1 class="Titulo">Aplicación a las Nuevas Tecnologias</h1>
     <section class="Contenedor">
         <div class="Actividad">
-            <h2>Actividad I: Aprendiendo GitHub</h2>
+            <h2>Actividad I: Rompecabezas</h2>
         </div>
         <div class="Consigna">
-            <p>En esta actividad, los alumnos deberan subir a GitHub un archivo
-                que contenga una Funcion que sume 2 numeros. <br> Con el siguiente 
-                video podran informarse sobre como subir archivos a GitHub.
-                <br><br> https://www.ayrtongato.com</p>
+            <p>Utilizen lo que les enseñe en el año para hacer un
+Programa en CNC que arme figuras de un Rompecabezas. A continuación
+Les dejo el link de descargar de Mach3000
+                <br><br> https://www.Mach.com</p>
         </div>
         <div class="Archivo">
             <p>Archivo</p>
