--- a/views/matters/MARCOJUR.ejs
+++ b/views/matters/MARCOJUR.ejs
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resources/css/Ac-FAT.css">
+    <link rel="stylesheet" href="resources/cssAc-FAT.css">
     <title>Actividades</title>
 </head>
 <body>
-    <h1 class="Titulo">Formacion en Ambiente de Trabajo</h1>
+    <h1 class="Titulo">Marco Juridico de las Act Industriales</h1>
     <section class="Contenedor">
         <div class="Actividad">
-            <h2>Actividad I: Aprendiendo GitHub</h2>
+            <h2>Actividad I: Proteccion Intelectual</h2>
         </div>
         <div class="Consigna">
-            <p>En esta actividad, los alumnos deberan subir a GitHub un archivo
-                que contenga una Funcion que sume 2 numeros. <br> Con el siguiente 
-                video podran informarse sobre como subir archivos a GitHub.
-                <br><br> https://www.ayrtongato.com</p>
+            <p>Leer desde la pagina 15 hasta la 1532 y hacer un resumen
+                de minimo 75 hojas. Se entrega mañana.
+                <br><br> https://www.modulo.com</p>
         </div>
         <div class="Archivo">
             <p>Archivo</p>
