--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -64,7 +64,7 @@ DOCTYPE html>
   
       <!- PERFIL ->
       <div id="profile">
-        <div id="photo"><img src="resources/Assets/ayrton.png" alt="Usuario"></div>
+        <div id="photo"><img src="resources/Assets/04-Students.png" alt="Usuario"></div>
         <div id="name">
           <% if(login) { %>
             <span><%= name %></span>
@@ -82,7 +82,7 @@ DOCTYPE html>
         <div class="item">
           <a href="#ShSec1" id="Btn1">
             <div class="icon first-icon">
-              <img src="resources/Assets/matters.png" alt="Materias">
+              <img src="resources/Assets/20-libreta.png" alt="Materias">
             </div>
             <div class="title">
               <span>Calificaciones</span>
@@ -99,19 +99,6 @@ DOCTYPE html>
             </div>
             <div class="title">
               <span>Materias</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="item separator"></div>
-
-        <div class="item">
-          <a href="" id="Btn3">
-            <div class="icon">
-              <img src="resources/Assets/matters.png" alt="">
-            </div>
-            <div class="title">
-              <span>Nombre del icono</span>
             </div>
           </a>
         </div>
