--- a/views/STUD-Matters.ejs
+++ b/views/STUD-Matters.ejs
@@ -52,7 +52,7 @@ DOCTYPE html>
   
       <!- PERFIL ->
       <div id="profile">
-        <div id="photo"><img src="resources/Assets/ayrton.png" alt="Usuario"></div>
+        <div id="photo"><img src="resources/Assets/04-Students.png" alt="Usuario"></div>
         <div id="name">
           <% if(login) { %>
             <span><%= name %></span>
@@ -70,7 +70,7 @@ DOCTYPE html>
         <div class="item">
           <a href="Students%Califications" id="Btn1">
             <div class="icon first-icon">
-              <img src="resources/Assets/matters.png" alt="Materias">
+              <img src="resources/Assets/20-libreta.png" alt="Calificaciones">
             </div>
             <div class="title">
               <span>Calificaciones</span>
@@ -91,18 +91,6 @@ DOCTYPE html>
           </a>
         </div>
 
-        <div class="item separator"></div>
-
-        <div class="item">
-          <a href="" id="Btn3">
-            <div class="icon">
-              <img src="resources/Assets/matters.png" alt="">
-            </div>
-            <div class="title">
-              <span>Nombre del icono</span>
-            </div>
-          </a>
-        </div>
 
 
         <div class="item separator"></div>
