--- a/views/matters/EMPREN.ejs
+++ b/views/matters/EMPREN.ejs
@@ -8,16 +8,16 @@
     <title>Actividades</title>
 </head>
 <body>
-    <h1 class="Titulo">Formacion en Ambiente de Trabajo</h1>
+    <h1 class="Titulo">Emprendimientos</h1>
     <section class="Contenedor">
         <div class="Actividad">
-            <h2>Actividad I: Aprendiendo GitHub</h2>
+            <h2>Actividad I: Steve Jobs</h2>
         </div>
         <div class="Consigna">
-            <p>En esta actividad, los alumnos deberan subir a GitHub un archivo
-                que contenga una Funcion que sume 2 numeros. <br> Con el siguiente 
-                video podran informarse sobre como subir archivos a GitHub.
-                <br><br> https://www.ayrtongato.com</p>
+            <p>Ver la Pelicula de Steve Jobs. Leer mel PDF de 300 pag
+3 veces y con eso responder el cuestionario que les dejo
+En el link.
+                <br><br> https://www.esteLink.com</p>
         </div>
         <div class="Archivo">
             <p>Archivo</p>
