--- a/views/matters/HYS.ejs
+++ b/views/matters/HYS.ejs
@@ -8,16 +8,15 @@
     <title>Actividades</title>
 </head>
 <body>
-    <h1 class="Titulo">Formacion en Ambiente de Trabajo</h1>
+    <h1 class="Titulo">Higiene y Seguridad</h1>
     <section class="Contenedor">
         <div class="Actividad">
-            <h2>Actividad I: Aprendiendo GitHub</h2>
+            <h2>Actividad I: Seguridad Laboral</h2>
         </div>
         <div class="Consigna">
-            <p>En esta actividad, los alumnos deberan subir a GitHub un archivo
-                que contenga una Funcion que sume 2 numeros. <br> Con el siguiente 
-                video podran informarse sobre como subir archivos a GitHub.
-                <br><br> https://www.ayrtongato.com</p>
+            <p>En esta actividad, los alumnos deberan buscar informacion
+                sobre elementos de proteccion en el Trabajo y elaborar un Power Point.
+                <br><br> https://www.paginaProfe.com</p>
         </div>
         <div class="Archivo">
             <p>Archivo</p>
