--- a/views/matters/LABINFOR.ejs
+++ b/views/matters/LABINFOR.ejs
@@ -8,16 +8,14 @@
     <title>Actividades</title>
 </head>
 <body>
-    <h1 class="Titulo">Formacion en Ambiente de Trabajo</h1>
+    <h1 class="Titulo">Laboratorio de Informatica</h1>
     <section class="Contenedor">
         <div class="Actividad">
-            <h2>Actividad I: Aprendiendo GitHub</h2>
+            <h2>Actividad I: Radio</h2>
         </div>
         <div class="Consigna">
-            <p>En esta actividad, los alumnos deberan subir a GitHub un archivo
-                que contenga una Funcion que sume 2 numeros. <br> Con el siguiente 
-                video podran informarse sobre como subir archivos a GitHub.
-                <br><br> https://www.ayrtongato.com</p>
+            <p>Busquen datos curiosos y grabenlos.
+                <br><br> https://www.radio.com</p>
         </div>
         <div class="Archivo">
             <p>Archivo</p>
